fixed dropdown on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -394,4 +394,8 @@ a:hover .card-name::after {
     body {
         padding: 24px 8px;
     }
+    .button .dropdown {
+	left: unset;
+	right: 0;
+    }
 }
